# slam_dunk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  imgui.ini  pyproject.toml  vcpkg.json
examples/: CMakeLists.txt  slamd  vcpkg-configuration.json  vcpkg.json
examples/arrows/: CMakeLists.txt  main.cpp
examples/camera_frustum/: CMakeLists.txt  main.cpp
examples/circles/: CMakeLists.txt  main.cpp
examples/do_it_yourself/: CMakeLists.txt  main.cpp
examples/hello_canvas/: CMakeLists.txt  main.cpp
examples/hello_visualizer/: CMakeLists.txt  main.cpp
examples/hello_world/: CMakeLists.txt  main.cpp
examples/hello_world_diy/: CMakeLists.txt  main.cpp
examples/hello_world_managed/: CMakeLists.txt  main.cpp
examples/managed_window/: CMakeLists.txt
examples/mesh/: CMakeLists.txt  main.cpp
examples/moving_box/: CMakeLists.txt  main.cpp
examples/one_scene_two_views/: CMakeLists.txt  main.cpp
examples/point_cloud/: CMakeLists.txt  main.cpp
examples/poly_line/: CMakeLists.txt  main.cpp
examples/poly_line_2d/: CMakeLists.txt  main.cpp
examples/three_d_spiral/: CMakeLists.txt  main.cpp
examples/two_scenes/: CMakeLists.txt  main.cpp
python_bindings/: CMakeLists.txt  README.md  pyproject.toml  vendored_deps
python_bindings/build_images/manylinux/: Dockerfile
python_bindings/src/: main.cpp
python_bindings/src/slamd/: __init__.py  geom.py
python_bindings/src/slamd/bindings/: __init__.pyi  _geom.pyi  geom.pyi  geom2d.pyi
python_bindings/src/slamd/geom/: __init__.py  overrides.py
python_bindings/src/slamd/geom2d/: overrides.py
slamd/: CMakeLists.txt  LICENSE  portfile.cmake  usage
slamd/cmake/: slamdConfig.cmake.in
slamd/flatb/: CMakeLists.txt  messages_generated.h  test_generated.h  visualizer_generated.h
slamd/flatb/flatb/: geom_generated.h  geometry_generated.h  gmath_generated.h  messages_generated.h  primitives_generated.h  visualizer_generated.h
slamd/include/slamd/: arcball.hpp  camera_2d.hpp  canvas_view.hpp  client_set.hpp  connection.hpp  constants.hpp  frame_buffer.hpp  frame_timer.hpp  glfw.hpp  global_object_map.hpp  id.hpp  object_tracker.hpp  paths.hpp  render_thread_job_queue.hpp  scene_node.hpp  scene_view.hpp  shaders.hpp  slamd.hpp  spawn_window.hpp  transforms.hpp  view.hpp  visualizer.hpp  window.hpp
slamd/include/slamd/data/: colored_vertex.hpp  image.hpp  mesh.hpp
slamd/include/slamd/geom/: aabb.hpp  arcball_indicator.hpp  arrows.hpp  box.hpp  camera_frustum.hpp  circles_2d.hpp  geometry.hpp  image.hpp  mesh.hpp  mono_instanced.hpp  mono_mesh.hpp  plane.hpp  point_cloud.hpp  points_2d.hpp  poly_line.hpp  poly_line_2d.hpp  rect2d.hpp  simple_mesh.hpp  sphere.hpp  triad.hpp  utils.hpp  xy_grid.hpp
slamd/include/slamd/geometry/: arcball_indicator.hpp  arrows.hpp  box.hpp  camera_frustum.hpp  geometry.hpp  image.hpp  mono_mesh.hpp  point_cloud.hpp  poly_line.hpp  simple_mesh.hpp  sphere.hpp  triad.hpp  utils.hpp  xy_grid.hpp
slamd/include/slamd/geometry2d/: geometry2d.hpp
slamd/include/slamd/gmath/: aabb.hpp  rect2d.hpp  transforms.hpp
slamd/include/slamd/net/: broadcaster.hpp  client_set.hpp  clients.hpp  connection.hpp  weak_object_counter.hpp
slamd/include/slamd/tree/: node.hpp  tree.hpp  tree_path.hpp
slamd/include/slamd/view/: canvas_view.hpp  scene_view.hpp
slamd/include/slamd_common/: assert.hpp  id.hpp  numbers.hpp
slamd/include/slamd_common/data/: image.hpp  mesh.hpp
slamd/include/slamd_common/gmath/: misc.hpp  rect2d.hpp  serialization.hpp  stringify.hpp  transforms.hpp
slamd/include/slamd_common/utils/: mesh.hpp  serialization.hpp  thread_safe_queue.hpp
slamd/include/slamd_window/: arcball.hpp  assert.hpp  camera.hpp  camera_2d.hpp  connection.hpp  constants.hpp  frame_buffer.hpp  frame_timer.hpp  glfw.hpp  image_texture.hpp  io.hpp  message.hpp  message_queue.hpp  paths.hpp  render_thread_job_queue.hpp  run_window.hpp  shaders.hpp  slamd.hpp  state_manager.hpp  visualizer.hpp  window.hpp
slamd/include/slamd_window/data/: image.hpp  mesh.hpp
slamd/include/slamd_window/geom/: arcball_indicator.hpp  arrows.hpp  box.hpp  camera_frustum.hpp  circles_2d.hpp  geometry.hpp  image.hpp  mesh.hpp  mono_instanced.hpp  plane.hpp  (+8 more)
slamd/shaders/arcball_indicator/: fragment_shader.frag
slamd/shaders/image/: vertex_shader.vert
slamd/shaders/mesh/: fragment_shader.frag  vertex_shader.vert
slamd/shaders/mono_instanced/: vertex_shader.vert
slamd/shaders/mono_mesh/: fragment_shader.frag  vertex_shader.vert
slamd/shaders/point_cloud/: fragment_shader.frag  vertex_shader.vert
slamd/shaders/simple_mesh/: fragment_shader.frag
slamd/src/: arcball.cpp  camera_2d.cpp  canvas_view.cpp  client_set.cpp  connection.cpp  frame_buffer.cpp  glfw.cpp  image_texture.cpp  render_thread_job_queue.cpp  scene.cpp  scene_view.cpp  shaders.cpp  transforms.cpp  visualizer.cpp  window.cpp
slamd/src/common/: assert.cpp
slamd/src/data/: image.cpp  mesh.cpp
slamd/src/geom/: aabb.cpp  arcball_indicator.cpp  arrows.cpp  box.cpp  camera_frustum.cpp  circles_2d.cpp  geometry.cpp  image.cpp  mesh.cpp  mono_instanced.cpp  mono_mesh.cpp  point_cloud.cpp  points_2d.cpp  poly_line.cpp  poly_line_2d.cpp  rect2d.cpp  simple_mesh.cpp  sphere.cpp  triad.cpp  utils.cpp  xy_grid.cpp
slamd/src/geometry/: arcball_indicator.cpp  arrows.cpp  box.cpp  camera_frustum.cpp  geometry.cpp  image.cpp  mono_mesh.cpp  point_cloud.cpp  poly_line.cpp  simple_mesh.cpp  sphere.cpp  triad.cpp  utils.cpp  xy_grid.cpp
slamd/src/gmath/: aabb.cpp  angle.cpp  transforms.cpp
slamd/src/net/: client_set.cpp  connection.cpp
slamd/src/slamd/: global_object_map.cpp  object_tracker.cpp  spawn_window.cpp  view.cpp  visualizer.cpp
slamd/src/tree/: node.cpp  tree.cpp
slamd/src/view/: canvas_view.cpp  scene_view.cpp
slamd/src/window/: arcball.cpp  assert.cpp  camera.cpp  camera_2d.cpp  connection.cpp  frame_buffer.cpp  frame_timer.cpp  glfw.cpp  image_texture.cpp  io.cpp  main.cpp  message.cpp  run_window.cpp  shaders.cpp  state_manager.cpp  visualizer.cpp  window.cpp
vendored_deps/imgui_wrapper/: CMakeLists.txt
(+204 files in other folders)
