[project]
name = "slamd_dev_env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fire>=0.7.0",
    "imageio>=2.37.0",
    "jinja2>=3.1.6",
    "numpy>=2.2.4",
    "pybind11>=2.13.6",
    "pybind11-stubgen>=2.5.3",
    "scipy>=1.15.2",
]
