[build-system]
requires = ["scikit-build-core>=0.10", "pybind11", "numpy>=1.23"]
build-backend = "scikit_build_core.build"

[project]
name = "slamd"
version = "0.1.0"
description = "Python bindings for SlamDunk"
authors = [{ name = "Robert Leo", email = "robert.leo.jonsson@gmail.com" }]
readme = "../README.md"
requires-python = ">=3.11"

[tool.scikit-build]
minimum-version = "build-system.requires"
