[build-system]
requires = ["scikit-build-core>=0.10", "pybind11", "numpy>=1.23"]
build-backend = "scikit_build_core.build"

[project]
name = "slamd"
version = "0.1.2"
description = "Python bindings for SlamDunk"
authors = [{ name = "Robert Leo", email = "robert.leo.jonsson@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=1.23"]

[tool.scikit-build]
minimum-version = "build-system.requires"

[tool.cibuildwheel]
build = "cp311-manylinux_x86_64"
skip = ["*musllinux*", "*win*", "*macos*", "pp*"]
